--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+.transition-sidebar {
+  transition: all 0.4s ease;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.book-table {
+  max-height: 51rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.transaction-table {
+  height: 48rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.transaction-space{
+  padding-top: 23.2rem;
+  padding-bottom: 23.2rem;
+}
+
+.admin-table {
+  max-height: 50rem;
+}
+
+.attendance-table {
+  max-height: 56rem;
+}
+
+.notification-height {
+  max-height: 27rem;
+}
+
+.delete-margin{
+  margin-right: 18px;
+}
+
+.arrow-icon.rotated {
+  transform: rotate(180deg);
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #202020;
+  border-radius: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  border-radius: 20px;
+  background-color: #d3d3d3;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #202020;
+}
+
+.input-border {
+  border: 1px solid #d2d6d8;
+}
+
+
+
+/* Loader.css */
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999; 
 }
 
-.App-link {
-  color: #61dafb;
+.loader {
+  border: 8px solid #3498db; 
+  border-top: 8px solid #ffffff; 
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  animation: spin 1s linear infinite; 
 }
 
-@keyframes App-logo-spin {
-  from {
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
+
