--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@
 }
 
 .loader {
-  border: 8px solid #3498db; 
+  border: 8px solid #309ce4; 
   border-top: 8px solid #ffffff; 
   border-radius: 50%;
   width: 64px;
